tests/NormalTests/paczka1/small_fuzzy/35885961.err
Error in line 6: ZhPidd7 A570 20,5
Error in line 11: A570 A570 41,5
